# query-engine

./: .coverage  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  approx_query_engine.bak  approx_query_engine.py  benchmark_suite.py  demo_sampling.py  demo_standalone.py  engine.py  pyproject.toml  requirements.txt  run_demo.py  run_demo.py.bak  sampling.py  sampling.py.bak  sampling.py.bak2  sampling_demo.ipynb  sketches.py  sql_parser.py  sql_parser.py.backup  sql_parser_fixed.py  synthetic_data.py  test.py  test_engine.py
.github/workflows/: tests.yml
benchmark_results/: benchmark_results.csv
benchmarks/: README.md  benchmark_results.md  run_all.py
tests/: conftest.py  test_config.py  test_error_bounds.py  test_performance.py  test_sampling.py  test_special_cases.py  test_validation.py
